--- a/css/_base.scss
+++ b/css/_base.scss
@@ -10,11 +10,12 @@ body {
     height: 100vh;
     width: 100vw;
     align-items: center;
-    justify-content: center;
     background: $color01;
 
     a,
     button {
+        border: none;
+        outline: none;
         cursor: pointer;
     }
 }
