--- a/css/_home.scss
+++ b/css/_home.scss
@@ -1,4 +1,4 @@
-.container-de-texto {
+.container-de-texto-home {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,7 +9,7 @@
     padding: 5px;
     color: $color02;
 
-    .texto {
+    .texto-home {
         height: 100%;
         min-width: 275px;
         max-width: 295px;
@@ -30,8 +30,6 @@
         min-width: 275px;
         width: 20vw;
         border-radius: 40px;
-        border: none;
-        outline: none;
         background: $color05;
 
         &:hover {
