view: Ajustando a estilização para as novas funcionalidades

--- a/css/_telas.scss
+++ b/css/_telas.scss
@@ -190,6 +190,15 @@
         align-items: center;
         padding: 10px;
 
+        .texto-de-excluir{
+            font-size: 1.2rem;
+            text-align: center;
+
+            #atividade{
+                font-weight: bolder;
+            }
+        }
+
         #cancelar-de-excluir,
         #excluir-de-excluir {
             height: 5vh;
