--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,13 @@ picture {
   align-items: center;
   padding: 10px;
 }
+.tela-de-excluir .container-de-excluir .texto-de-excluir {
+  font-size: 1.2rem;
+  text-align: center;
+}
+.tela-de-excluir .container-de-excluir .texto-de-excluir #atividade {
+  font-weight: bolder;
+}
 .tela-de-excluir .container-de-excluir #cancelar-de-excluir,
 .tela-de-excluir .container-de-excluir #excluir-de-excluir {
   height: 5vh;
@@ -279,7 +286,7 @@ picture {
   align-items: center;
   overflow-y: auto;
 }
-.container-de-dias .area-de-dias .dias {
+.container-de-dias .area-de-dias .dia {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -289,13 +296,15 @@ picture {
   height: 15vh;
   width: 12vw;
   border-radius: 20px;
+  font-size: 1.2rem;
 }
-.container-de-dias .area-de-dias .dias #hoje-de-dias {
+.container-de-dias .area-de-dias .dia #hoje {
   background: #AFAEAE;
   line-height: 30px;
   width: 8vw;
-  margin-top: 30px;
+  margin-top: 10px;
   border-radius: 20px;
+  font-size: 1rem;
 }
 .container-de-dias #adicionar-de-dias {
   background: #FEDB71;
@@ -321,17 +330,76 @@ picture {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 85%;
-  width: 85%;
+  height: 95%;
+  width: 95%;
   background: #C5C5C4;
   padding: 20px;
 }
 .container-de-tarefas .area-de-tarefas .titulo-de-tarefas {
+  display: flex;
+  flex-direction: column;
   background: #AFAEAE;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
   width: 20vw;
   border-radius: 20px;
+  font-size: 1.5rem;
+}
+.container-de-tarefas .area-de-tarefas .tarefas {
+  height: 60%;
+  width: 85%;
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task {
+  background: #AFAEAE;
+  position: relative;
+  height: 100px;
+  width: 100%;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
   font-size: 1.2rem;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task h1 {
+  text-align: justify;
+  line-height: 80px;
+  width: 20%;
+  padding-left: 20px;
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task h1::after {
+  content: ":";
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task p {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #C5C5C4;
+  height: 80px;
+  width: 65%;
+  text-align: center;
+  border-radius: 30px;
+  padding: 5px;
+  overflow-y: auto;
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task #editor,
+.container-de-tarefas .area-de-tarefas .tarefas .task #removedor {
+  background-color: transparent;
+  height: 50px;
+  width: 50px;
+  margin: auto;
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task #editor {
+  background-image: url(../img/icons8-lápis-30.png);
+  background-size: cover;
+  background-position: center;
+}
+.container-de-tarefas .area-de-tarefas .tarefas .task #removedor {
+  background-image: url(../img/icons8-lixo-30.png);
+  background-size: cover;
+  background-position: center;
 }
 .container-de-tarefas .area-de-tarefas #adicionar-de-tarefas {
   height: 5vh;
