--- a/css/main.css
+++ b/css/main.css
@@ -297,8 +297,9 @@ picture {
   width: 12vw;
   border-radius: 20px;
   font-size: 1.2rem;
+  margin: 5px 0px;
 }
-.container-de-dias .area-de-dias .dia #hoje {
+.container-de-dias .area-de-dias .dia .hoje {
   background: #AFAEAE;
   line-height: 30px;
   width: 8vw;
@@ -350,6 +351,7 @@ picture {
 .container-de-tarefas .area-de-tarefas .tarefas {
   height: 60%;
   width: 85%;
+  overflow-y: auto;
 }
 .container-de-tarefas .area-de-tarefas .tarefas .task {
   background: #AFAEAE;
