--- a/css/main.scss
+++ b/css/main.scss
@@ -42,8 +42,9 @@ $color09: #202148;
             width: 12vw;
             border-radius: 20px;
             font-size: 1.2rem;
+            margin: 5px 0px;
 
-            #hoje {
+            .hoje {
                 background: $color04;
                 line-height: 30px;
                 width: 8vw;
@@ -101,6 +102,7 @@ $color09: #202148;
         .tarefas {
             height: 60%;
             width: 85%;
+            overflow-y: auto;
 
             .task {
                 background: $color04;
