--- a/css/main.scss
+++ b/css/main.scss
@@ -12,168 +12,4 @@ $color09: #202148;
 @import 'base';
 @import 'home';
 @import 'telas';
-
-.container-de-dias {
-    background: $color09;
-    height: 100vh;
-    width: 15vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-
-    .area-de-dias {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow-y: auto;
-
-        .dia {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background: $color02;
-            text-align: center;
-            height: 15vh;
-            width: 12vw;
-            border-radius: 20px;
-            font-size: 1.2rem;
-            margin: 5px 0px;
-
-            .hoje {
-                background: $color04;
-                line-height: 30px;
-                width: 8vw;
-                margin-top: 10px;
-                border-radius: 20px;
-                font-size: 1rem;
-            }
-        }
-    }
-
-    #adicionar-de-dias {
-        background: $color06;
-        height: 50px;
-        width: 50px;
-        border-radius: 40px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 1.5rem;
-
-        &:hover {
-            background: lighten($color06, $amount: 10);
-        }
-    }
-}
-
-.container-de-tarefas {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 85vw;
-
-    .area-de-tarefas {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        height: 95%;
-        width: 95%;
-        background: $color03;
-        padding: 20px;
-
-        .titulo-de-tarefas {
-            display: flex;
-            flex-direction: column;
-            background: $color04;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            height: 150px;
-            width: 20vw;
-            border-radius: 20px;
-            font-size: 1.5rem;
-        }
-
-        .tarefas {
-            height: 60%;
-            width: 85%;
-            overflow-y: auto;
-
-            .task {
-                background: $color04;
-                position: relative;
-                height: 100px;
-                width: 100%;
-                border-radius: 30px;
-                display: flex;
-                align-items: center;
-                font-size: 1.2rem;
-                padding: 10px;
-                margin-bottom: 20px;
-
-                h1 {
-                    text-align: justify;
-                    line-height: 80px;
-                    width: 20%;
-                    padding-left: 20px;
-
-                    &::after {
-                        content: ":";
-                    }
-                }
-
-                p {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    background-color: $color03;
-                    height: 80px;
-                    width: 65%;
-                    text-align: center;
-                    border-radius: 30px;
-                    padding: 5px;
-                    overflow-y: auto;
-                }
-
-                .editor,
-                .removedor {
-                    background-color: transparent;
-                    height: 50px;
-                    width: 50px;
-                    margin: auto;
-                }
-
-                .editor {
-                    background-image: url(../img/icons8-lápis-30.png);
-                    background-size: cover;
-                    background-position: center;
-                }
-
-                .removedor {
-                    background-image: url(../img/icons8-lixo-30.png);
-                    background-size: cover;
-                    background-position: center;
-                }
-            }
-        }
-
-        #adicionar-de-tarefas {
-            height: 5vh;
-            width: 20vw;
-            font-size: 1.2rem;
-            background: $color06;
-            border-radius: 20px;
-            margin-bottom: 80px;
-
-            &:hover {
-                background: lighten($color06, $amount: 10);
-            }
-        }
-    }
-}
+@import 'tarefas'
