--- a/css/_tarefas.scss
+++ b/css/_tarefas.scss
@@ -23,11 +23,11 @@
             justify-content: center;
             background: $color02;
             text-align: center;
-            height: 15vh;
+            min-height: 180px;
             width: 12vw;
             border-radius: 20px;
             font-size: 1.2rem;
-            margin: 5px 0px;
+            margin: 10px 0px;
 
             .hoje {
                 background: $color04;
